# visual-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: CLAUDE_DESKTOP_SETUP.md  CRUSH.md  PROJECT_SUMMARY.md
examples/: analyze_image.py  example_usage.py
src/visual_mcp/: __init__.py  main.py  server.py
tests/: __init__.py  test_server.py
