[project]
name = "visual-mcp"
version = "0.1.0"
description = "MCP server for multimodal image analysis using GLM-4.5V"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.14.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
visual-mcp = "visual_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visual_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.18.1",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["visual_mcp"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
